# pytorch-to-calyx

./: .gitignore  CNN-TO-CALYX.md  README.md
DenseResourceElement2DenseElement/: CMakeLists.txt  main.cpp
MemrefCopyToAffineLoop/: CMakeLists.txt  MemRefCopyToAffineLoop.cpp  MemRefCopyToAffineLoop.h  main.cpp
Quantization/: CMakeLists.txt  main.cpp
SimplifyAddressCalculation/: CMakeLists.txt  SimplifyAddressCalculation.cpp  SimplifyAddressCalculation.h  main.cpp
StrengthReduction/: CMakeLists.txt  StrengthReduction.cpp  StrengthReduction.h  main.cpp
examples/cnn/: affine-lowered.mlir  before-flatten.mlir  cnn.calyx  cnn.futil  cnn.mlir  cnn.py  cnn.sv  copied.mlir  data.json  expanded.mlir  flattened.mlir  generate-verilog.sh  range-optimized.mlir  reduced.mlir
examples/fnn/: fn-allo.py  fnn.mlir  fnn.py  fnn.sv  generate-verilog.sh  non-reduced-fnn.sv  non-reduced.sv  reduced-data.json  reduced.sv  simplified.mlir  simplified.sv  test-runner.py  testbench.cpp
examples/fnn/data/: mem_3.out  mem_4.out
